# ratatui-project

./: Cargo.toml  README.md  database.json
src/: lib.rs  main.rs
src/banking_system/: handlers.rs  mod.rs  models.rs  utils.rs
src/events/: mod.rs  user_input.rs
src/interfaces/: app.rs  mod.rs
src/utils/: mod.rs
