[package]
name = "ratatui-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.22.0", features = ["all-widgets"]}
anyhow = "1.0"
[dependencies.crossterm]
version = "0.26"
features = ["event-stream"] 